--- a/models_report.qmd
+++ b/models_report.qmd
@@ -1,5 +1,5 @@
 ---
-title: "___"
+title: "Relations entre morphologie et stratégies de nage chez les poissons des Grands Lacs"
 author: "Amal Abarou, Ide Tchuileng, Christelle Baseka"
 format:
   pdf:
@@ -18,15 +18,17 @@ bibliography: references.bib
 
 La morphologie des poissons constitue un déterminant majeur de leur écologie de déplacement, influençant la performance de nage, l’efficacité énergétique, les interactions sociales ainsi que la capacité à franchir des obstacles physiques tels que des rapides ou des passes à poissons. Les traits morphologiques tels que la forme du corps, la profondeur relative, le rapport d’aspect de la nageoire caudale ou encore la taille des nageoires pectorales sont directement associés aux stratégies de nage, qu’elles soient axées sur la vitesse, l’endurance, la manœuvrabilité ou la stabilité dans la colonne d’eau. De même, certains traits comportementaux, tels que la tendance à former des bancs, constituent des réponses écologiques façonnées par le régime hydrodynamique, la prédation ou les modes d’alimentation.
 
-Dans ce contexte, la base de données FishPass Sortable Attribute Database proposée par Benoit *et al.* (2023) représente une ressource particulièrement pertinente. Elle regroupe des informations morphologiques, physiologiques, comportementales et phénologiques pour un large ensemble d’espèces de poissons des Grands Lacs. Cette base vise notamment à mieux comprendre les facteurs influençant la capacité des poissons à se déplacer et à franchir les aménagements anthropiques.
+Dans ce contexte, la base de données FishPass Sortable Attribute Database (Benoit et al., 2023) constitue une ressource pertinente, regroupant des informations morphologiques, physiologiques, comportementales et phénologiques pour un large ensemble d’espèces des Grands Lacs. Elle permet notamment d’analyser les facteurs influençant la capacité des poissons à se déplacer et à franchir des aménagements anthropiques.
 
-Dans le cadre de ce projet, nous avons sélectionné et combiné deux ensembles de données issus de cette base : FishPass Morphology et FishPass Behaviour. Notre objectif est d’analyser les relations entre traits morphologiques et comportements de nage, en particulier la tendance à former des bancs, ainsi que la position verticale dans la colonne d’eau. Les variables retenues incluent des indicateurs de forme corporelle (ex. profondeur du corps, rapport d’aspect, étroitesse du pédoncule caudal) et des traits fonctionnels liés à la nage (position et taille des nageoires, position et taille de l’œil).
+Pour ce projet, nous avons combiné deux ensembles de données issus de cette base : FishPass Morphology et FishPass Behaviour. L’objectif est d’étudier les relations entre traits morphologiques et comportements de nage, en particulier la tendance à former des bancs et la position verticale dans la colonne d’eau. Les variables retenues incluent des indicateurs de forme corporelle (profondeur du corps, rapport d’aspect, étroitesse du pédoncule caudal) ainsi que des traits fonctionnels liés à la nage (position et taille des nageoires, position et taille de l’œil).
 
-L’enjeu de cette étude est de déterminer si certains profils morphologiques sont associés à des stratégies collectives ou individuelles de déplacement, et dans quelle mesure la morphologie peut être considérée comme un prédicteur du comportement. Une meilleure compréhension de ces relations contribue à éclairer les mécanismes sous-jacents à l’adaptation écologique, mais également à l’aménagement de dispositifs favorisant la migration des poissons, notamment au sein des systèmes fluviaux aménagés.
+Cette étude vise à déterminer si certains profils morphologiques sont associés à des stratégies de déplacement collectives ou individuelles, et dans quelle mesure la morphologie peut prédire le comportement. Une meilleure compréhension de ces relations éclaire les mécanismes sous-jacents à l’adaptation écologique et peut guider l’aménagement de dispositifs favorisant la migration des poissons dans les systèmes fluviaux aménagés.
 
 ## But
 
 <!--% Rédigez le but de ce rapport en 2 phrases.-->
+
+L’objectif de cette étude est d’examiner comment les traits morphologiques des poissons sont associés à la forme du corps, à la position verticale dans la colonne d’eau et au comportement de banc, et de déterminer dans quelle mesure la morphologie peut prédire ces stratégies de nage.
 
 ## Matériel et méthodes
 
