conclusion du projet

--- a/models_notebook.qmd
+++ b/models_notebook.qmd
@@ -422,7 +422,11 @@ Le modèle s’ajuste bien aux données (pas de surdispersion), et tous les para
 
 <!--% Lorsque toutes les analyses sont réalisées, terminez ce bloc-notes avec 3 à 6 phrases de conclusion en rapport avec ce que vous avez observé dans vos analyses. Quels sont les modèles les plus pertinents que vous retenez ? -->
 
-...vos conclusions ici...
+Dans l’ensemble, nos analyses montrent que plusieurs traits morphologiques clés influencent à la fois la performance locomotrice et certains comportements sociaux chez les poissons des Grands Lacs. Les relations exploratoires soulignent notamment l’importance du rapport d’aspect et de l’étroitesse du pédoncule caudal, fortement associés aux espèces formant des bancs et à des stratégies de nage rapides et efficaces. Les modèles linéaires confirment également que la taille relative de l’œil diminue avec l’augmentation de la taille corporelle, un pattern classique d’allométrie sensorielle que nous retrouvons clairement dans nos données.
+
+Parmi les modèles testés, les régressions intégrant des interactions biologiquement pertinentes (par exemple, l’effet différent du rapport d’aspect selon la position verticale) se révèlent plus informatives que les modèles simples, tout en restant suffisamment parcimonieuses. Enfin, le modèle logistique identifie deux prédicteurs robustes du comportement de banc le rapport d’aspect et la position verticale de l’œil indiquant que ces traits morphologiques jouent un rôle majeur dans la structuration des comportements sociaux.
+
+Les modèles retenus comme les plus pertinents sont donc : la régression polynomiale reliant la taille de l’œil à la longueur maximale, le modèle linéaire avec interaction Rapport_aspect × Vertical_station, et le GLM logistique expliquant le comportement de banc, car ils offrent les résultats les plus cohérents et biologiquement interprétables.
 
 ## Références
 
